--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -7,7 +7,7 @@
 	padding: 0 $half-line;
 
 	@media #{$bp} {
-		margin: auto;
+		margin: 0;
 		padding: 0;
 	}
 
