--- a/css/main.scss
+++ b/css/main.scss
@@ -31,8 +31,8 @@ $widescreen-font-size: 125%;
 $very-widescreen-font-size: 125%;
 $max-page-width: 30em;
 $grid-h-padding: $quadruple-line;
-$grid-v-padding: $double-line;
-$bleed-width: ($max-page-width+$double-line+$half-line);
+$grid-v-padding: $treble-line;
+$bleed-width: ($max-page-width+$treble-line);
 
 
 // Type scale (see http://type-scale.com/ minor third)
@@ -64,7 +64,7 @@ $code: #FCDF02;
 $background: #BCAEA9;
 
 $nbp: "screen and (min-width: 700px)";
-$bp: "screen and (min-width: 1020px)";
+$bp: "screen and (min-width: 1040px)";
 $wbp: "screen and (min-width: 1100px)";
 $vwbp: "screen and (min-width: 1200px)";
 
